index.html links updated

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <!-- nav -->
       <nav id="header-nav">
         <ul class="site-nav">
-          <li><a href="#" class="site-nav-item">home</a></li>
-          <li><a href="#" class="site-nav-item">blog post</a></li>
+          <li><a href="index.html" class="site-nav-item">home</a></li>
+          <li><a href="post.html" class="site-nav-item" target="_blank">blog post</a></li>
           <li><a href="#" class="site-nav-item">contact</a></li>
         </ul>
       </nav>
@@ -45,7 +45,7 @@
           suscipit facilis aperiam expedita, nam iste est enim quam, officiis incidunt quos magni sed ab...
         </p>
       </div>
-      <a href="3" id="hero-button">Continue reading</a>
+      <a href="post.html" id="hero-button">Continue reading</a>
     </section>
     <section id="posts" class="card-container">
       <article class="card-post">
@@ -91,10 +91,11 @@
   <footer class="layout-padding">
     <div class="container footer-container">
       <section id="social-container">
-        <a class="social-link" href="#"><i class="fab fa-twitter"></i></a>
-        <a class="social-link" href="#"><i class="fab fa-facebook"></i></a>
-        <a class="social-link" href="#"><i class="fab fa-linkedin"></i></a>
-        <a class="social-link" href="#"><i class="fab fa-github"></i></a>
+        <a class="social-link" href="https://twitter.com/r4de2"><i class="fab fa-twitter"></i></a>
+        <a class="social-link" href="https://www.facebook.com/rade.mihovilovic/"><i class="fab fa-facebook"></i></a>
+        <a class="social-link" href="https://www.linkedin.com/in/rade-mihovilovi%C4%87-49617313a/"><i
+            class="fab fa-linkedin"></i></a>
+        <a class="social-link" href="https://github.com/r4deadv"><i class="fab fa-github"></i></a>
       </section>
       <section id="subscription">
         <form id="subscription-form" action="index.html">
