new intro section on index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container header-container">
       <div id="header-logo-container">
         <div id="header-logo-img-container">
-          <a id="header-logo-link" href="#social-container"><img id="header-logo-img" src="images/rade.mihovilovic.jpg"
+          <a id="header-logo-link" href="#social-container"><img id="header-logo-img" src="images/Rade-Logo-2019.png"
               alt="author logo"></a>
         </div>
         <p class="author-name">Rade Mihovilovic</p>
@@ -36,13 +36,21 @@
 
   <!-- main -->
   <main class="main-container">
+    <section class="blog-intro">
+      <img class="intro-img" src="images/rade.mihovilovic.jpg" alt="Author avatar">
+      <div class="intro-info">
+        <h1>Hey! I'm Rade</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+      </div>
+    </section>
     <section id="hero">
       <img id="hero-img" src="images/pierre-chatel-innocenti.jpg" alt="palms">
       <div class="description-wrapper">
-        <h2>Lorem, ipsum dolor</h2>
+        <h2>What are pastel colors?</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure velit maxime consequatur non explicabo magnam
-          suscipit facilis aperiam expedita, nam iste est enim quam, officiis incidunt quos magni sed ab...
+          When you think pastel colors, the first things that probably come to mind are: Easter, Cupcakes, Babies.
+          But there’s so much more to these soft, muted colors. And if you reserve pastels strictly for buttercream and
+          nurseries....
         </p>
       </div>
       <a href="post.html" id="hero-button">Continue reading</a>
