blog page added and styling almost done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container header-container">
       <div id="header-logo-container">
         <div id="header-logo-img-container">
-          <a id="header-logo-link" href="#social-container"><img id="header-logo-img" src="images/Rade-Logo-2019.png"
+          <a id="header-logo-link" href="blog.html#author"><img id="header-logo-img" src="images/Rade-Logo-2019.png"
               alt="author logo"></a>
         </div>
         <p class="author-name">Rade Mihovilovic</p>
@@ -27,8 +27,8 @@
       <nav id="header-nav">
         <ul class="site-nav">
           <li><a href="index.html" class="site-nav-item">home</a></li>
-          <li><a href="post.html" class="site-nav-item" target="_blank">blog post</a></li>
-          <li><a href="#" class="site-nav-item">contact</a></li>
+          <li><a href="blog.html" class="site-nav-item" target="_blank">blog post</a></li>
+          <li><a href="#subscription" class="site-nav-item">contact</a></li>
         </ul>
       </nav>
     </div>
@@ -36,13 +36,17 @@
 
   <!-- main -->
   <main class="main-container">
+    <!-- intro -->
     <section class="blog-intro">
       <img class="intro-img" src="images/rade.mihovilovic.jpg" alt="Author avatar">
       <div class="intro-info">
         <h1>Hey! I'm Rade</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+        <p>Web developer and content creator based in Berlin, Germany. Aenean commodo ligula eget dolor. Aenean massa.
+        </p>
       </div>
     </section>
+
+    <!-- hero landing card -->
     <section id="hero">
       <img id="hero-img" src="images/pierre-chatel-innocenti.jpg" alt="palms">
       <div class="description-wrapper">
@@ -53,42 +57,44 @@
           nurseries....
         </p>
       </div>
-      <a href="post.html" id="hero-button">Continue reading</a>
+      <a href="blog.html" id="hero-button">Continue reading</a>
     </section>
+
+    <!-- cards grid -->
     <section id="posts" class="card-container">
       <article class="card-post">
         <img class="card-post-img" src="images/p-clean-2-1.jpg" alt="post 1">
-        <a href="post.html" class="card-post-img-link">
+        <a href="blog.html" class="card-post-img-link">
           <img class="" src="images/link-solid.svg" alt="link icon">
         </a>
       </article>
       <article class="card-post">
         <img class="card-post-img" src="images/p-clean-2-2.jpg" alt="post 2">
-        <a href="post.html" class="card-post-img-link">
+        <a href="blog.html" class="card-post-img-link">
           <img class="" src="images/link-solid.svg" alt="link icon">
         </a>
       </article>
       <article class="card-post">
         <img class="card-post-img" src="images/p-clean-2-3.jpg" alt="post 3">
-        <a href="post.html" class="card-post-img-link">
+        <a href="blog.html" class="card-post-img-link">
           <img class="" src="images/link-solid.svg" alt="link icon">
         </a>
       </article>
       <article class="card-post">
         <img class="card-post-img" src="images/p-clean-2-4.jpg" alt="post 4">
-        <a href="post.html" class="card-post-img-link">
+        <a href="blog.html" class="card-post-img-link">
           <img class="" src="images/link-solid.svg" alt="link icon">
         </a>
       </article>
       <article class="card-post">
         <img class="card-post-img" src="images/p-clean-2-5.jpg" alt="post 5">
-        <a href="post.html" class="card-post-img-link">
+        <a href="blog.html" class="card-post-img-link">
           <img class="" src="images/link-solid.svg" alt="link icon">
         </a>
       </article>
       <article class="card-post">
         <img class="card-post-img" src="images/p-clean-2-6.jpg" alt="post 6">
-        <a href="post.html" class="card-post-img-link">
+        <a href="blog.html" class="card-post-img-link">
           <img class="" src="images/link-solid.svg" alt="link icon">
         </a>
       </article>
@@ -117,7 +123,7 @@
           </div>
           <input class="submit-button" type="submit" value="Subscribe"></button>
         </form>
-        <p class="copy">Copy&copy Rade Mihovilovic 2022</p>
+        <p class="copy">Copy&copy; Rade Mihovilovic &commat;2022</p>
       </section>
     </div>
   </footer>
