search box added

--- a/blog.html
+++ b/blog.html
@@ -99,9 +99,8 @@
     <!-- sidebar -->
     <aside id="blog-sidebar">
       <div class="searchContainer">
-        <i class="fa fa-search searchIcon"></i>
         <input class="searchBox" type="search" name="search" placeholder="Search...">
-        <input type="submit" value="Search" class="searchButton">
+        <a href="#" type="submit"><i class="fa fa-search searchIcon"></i></a>
       </div>
       <section class="tags">
         <h3>Tags</h3>
