responsive added on the blog page

--- a/blog.html
+++ b/blog.html
@@ -137,7 +137,7 @@
     <article class="mini-post-card">
       <h3>Pastel colors</h3>
       <img src="images/sweet-wool.jpg" alt="Pastel colors image">
-      <p>In the 1980s, there was a trend of pastel colors in men's fashion. In particular...</p>
+      <p>In the 1980s, there was a trend of pastel colors in men's fashion. In particular way...</p>
       <button class="sl-btn"><a href="blog.html">Read more</a></button>
     </article>
 
