new transform effect added on blog cards on the home page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       <img class="intro-img" src="images/rade.mihovilovic.jpg" alt="Author avatar">
       <div class="intro-info">
         <h1>Hey! I'm Rade</h1>
-        <p>Web developer and content creator based in Berlin, Germany. Aenean commodo ligula eget dolor. Aenean massa.
+        <p>Web developer and content creator based in Berlin, Germany. Great fan of outdoor activities and motor racing.
+          Free climber.
         </p>
       </div>
     </section>
@@ -53,7 +54,7 @@
         <h2>What are pastel colors?</h2>
         <p>
           When you think pastel colors, the first things that probably come to mind are: Easter, Cupcakes, Babies.
-          But there’s so much more to these soft, muted colors. And if you reserve pastels strictly for buttercream and
+          But there's so much more to these soft, muted colors. And if you reserve pastels strictly for buttercream and
           nurseries....
         </p>
       </div>
